// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Contract v1 — capture engine output (goldens) damage (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "damage"
      ],
      "form": "damage",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "damage",
  "word": "damage"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) father (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "father"
      ],
      "form": "father",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "father",
  "word": "father"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) love (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "love"
      ],
      "form": "love",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "O-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "love",
  "word": "love"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) mathematics (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "mathematics"
      ],
      "form": "mathematics",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E-A-I"
    }
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "mathematics",
  "word": "mathematics"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) study (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "study"
      ],
      "form": "study",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "U-Y"
    }
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "study",
  "word": "study"
}"
`;
